--- a/pillar.conf
+++ b/pillar.conf
@@ -3,6 +3,12 @@
   "title":"Mocking in Pharo",
   "attribution":"A. Magyar and D. Kudriashov"
   },
+  "outputDirectory":"build",
+    "mainDocument":"mocking",
+    "latexTemplate":"support/templates/main.latex.mustache",
+    "latexChapterTemplate":"support/templates/chapter.latex.mustache",
+    "htmlTemplate":"support/templates/html.mustache",
+    "htmlChapterTemplate":"support/templates/html.mustache",
   "newLine":#unix,
   "configurations": {
     "LaTeX" : {
