--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 - docker pull dpollet/texlive:pillar
 
 script:
-- docker run --tty --rm --volume $PWD:/work dpollet/texlive:pillar make pdfbook spiralbook
+- docker run --tty --rm --volume $PWD:/work dpollet/texlive:pillar make spiral
 
 deploy:
   provider: releases
