chapter introspect based makefiles

--- a/pillar.conf
+++ b/pillar.conf
@@ -9,6 +9,11 @@
     "latexChapterTemplate":"support/templates/chapter.latex.mustache",
     "htmlTemplate":"support/templates/html.mustache",
     "htmlChapterTemplate":"support/templates/html.mustache",
+    "chapters": [
+	"Chapters/Mocketry/Mocketry",
+	"Chapters/BabyMock/BabyMock",
+	"Chapters/StateSpecs/StateSpecs"
+	],
   "newLine":#unix,
   "configurations": {
     "LaTeX" : {
