--- a/pillar.conf
+++ b/pillar.conf
@@ -1,28 +1,11 @@
 {
-  "metadata": {
-  "title":"Mocking in Pharo",
-  "attribution":"A. Magyar and D. Kudriashov"
-  },
-  "outputDirectory":"build",
-    "mainDocument":"mocking",
-    "latexTemplate":"support/templates/main.latex.mustache",
-    "latexChapterTemplate":"support/templates/chapter.latex.mustache",
-    "htmlTemplate":"support/templates/html.mustache",
-    "htmlChapterTemplate":"support/templates/html.mustache",
-    "chapters": [
-	"Chapters/Mocketry/Mocketry",
-	"Chapters/BabyMock/BabyMock",
-	"Chapters/StateSpecs/StateSpecs"
-	],
-  "newLine":#unix,
-  "configurations": {
-    "LaTeX" : {
-      "outputType":#'latex:sbabook',
-      "separateOutputFiles":true
-    },
-    "HTML" : {
-      "outputType":#html,
-      "separateOutputFiles":true
-    }
-  }
+  "title": "Mocking in Pharo",
+  "attribution": "D. Kudriashov and A. Magyar ",
+  "series": "The Pharo TextBook Collection",
+  "keywords": "Scheme, Pharo, Smalltalk",
+  "base_url": "http://books.pharo.org/booklet-MockingInPharo/html",
+  "tocFile": "book.pillar",
+  "newLine": #unix,
+  "latexWriter": #'latex:sbabook',
+  "htmlWriter": #html
 }
