--- a/pillar.conf
+++ b/pillar.conf
@@ -6,6 +6,7 @@
   "base_url": "http://books.pharo.org/booklet-MockingInPharo/html",
   "tocFile": "book.pillar",
   "newLine": #unix,
+  "plugins": ["PRFootnoteTransformer"],
   "latexWriter": #'latex:sbabook',
   "htmlWriter": #html
 }
