Migrate to github actions

--- a/pillar.conf
+++ b/pillar.conf
@@ -4,7 +4,7 @@
   "series": "The Pharo TextBook Collection",
   "keywords": "Scheme, Pharo, Smalltalk",
   "base_url": "http://books.pharo.org/booklet-MockingInPharo/html",
-  "tocFile": "book.pillar",
+  "tocFile": "index.pillar",
   "newLine": #unix,
   "plugins": ["PRFootnoteTransformer"],
   "latexWriter": #'latex:sbabook',
