converted to microdown

--- a/pillar.conf
+++ b/pillar.conf
@@ -1,12 +1,1 @@
-{
-  "title": "Mocking in Pharo",
-  "attribution": "D. Kudriashov and A. Magyar ",
-  "series": "The Pharo TextBook Collection",
-  "keywords": "Scheme, Pharo, Smalltalk",
-  "base_url": "http://books.pharo.org/booklet-MockingInPharo/html",
-  "tocFile": "book.pillar",
-  "newLine": #unix,
-  "plugins": ["PRFootnoteTransformer"],
-  "latexWriter": #'latex:sbabook',
-  "htmlWriter": #html
-}
+{	"newLine" : "unix",	"base_url" : "http://books.pharo.org/booklet-MockingInPharo/html",	"attribution" : "D. Kudriashov and A. Magyar ",	"keywords" : "Scheme, Pharo, Smalltalk",	"title" : "Mocking in Pharo",	"series" : "The Pharo TextBook Collection",	"htmlWriter" : "html",	"latexWriter" : "miclatex:sbabook",	"tocFile" : "book.pillar"}
